update load image

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get:
   image_picker: ^0.8.4+4
   image_cropper: ^1.4.1
+  path_provider: ^2.0.7
 
 dev_dependencies:
   flutter_test:
